# vxdb

./: README.md  pyproject.toml
.amazonq/: mcp.json
.codex/: config.toml
.github/: FUNDING.yml
docs/specs/vxdb/: core-flows.md  epic-brief.md  tech-plan.md  tickets.md
docs/specs/vxdb-v02/: epic-brief.md  tech-plan.md  tickets.md
skills/bug-archaeologist/: SKILL.md
skills/codebase-cartographer/: SKILL.md
skills/decision-journal/: SKILL.md
skills/knowledge-distiller/: SKILL.md
skills/learning-log/: SKILL.md
skills/research-synthesizer/: SKILL.md
skills/self-evaluator/: SKILL.md
skills/semantic-cache/: SKILL.md
skills/tool-documenter/: SKILL.md
skills/vxdb/: SKILL.md
tests/: test_duckdb_lance.py  test_embedder.py  test_rewriter.py  test_schema.py  test_sql_parser.py  test_storage.py  test_tools.py
vxdb/: __init__.py  __main__.py  embedder.py  rewriter.py  schema.py  server.py  sql_parser.py  storage.py  tools.py
