[project]
name = "vxdb"
version = "0.2.0"
description = "Vectorized database over MCP. SQLite for vectors."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp",
    "lancedb",
    "fastembed",
    "duckdb",
]

[project.scripts]
vxdb = "vxdb.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
